# proga_kurs2

./: CMakeLists.txt  Functional.cpp  Functional.h  Util.cpp  Util.h  main.cpp
model/core/: Player.cpp  Player.h  TeamStat.cpp  TeamStat.h
model/list/: IntList.cpp  IntList.h  PlayerList.cpp  PlayerList.h  StringList.cpp  StringList.h  TeamStatList.cpp  TeamStatList.h
model/node/: IntNode.cpp  IntNode.h  PlayerNode.cpp  PlayerNode.h  StringNode.cpp  StringNode.h  TeamStatNode.cpp  TeamStatNode.h
